--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -40,26 +40,6 @@
                         <ellipse style="fill: none; stroke: rgb(255, 100, 100);" cx="14" cy="38" rx="7.5" ry="7.5"></ellipse>
                       </g>
                 </svg>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 280 60">
-                    <defs>
-                        <linearGradient id="loadgrad" x1="0.5" y1="0" x2="0.5" y2="1">
-                          <stop offset="1%" stop-color="#a6e5f2"/>
-                          <stop offset="34%" stop-color="#84d2ee"/>
-                          <stop offset="100%" stop-color="#5ea6ed"/>
-                        </linearGradient>
-                        <clipPath id="loadtext">
-                          <text x="54" y="37" class="loadtext">TREM 臺灣即時地震監測</text>
-                        </clipPath>
-                    </defs>
-                    <text class="loadtext loadtext-stroke" x="54" y="31.15" clip-path="url(#loadtext)">TREM 臺灣即時地震監測</text>
-                    <g id="loadlogo">
-                        <ellipse style="fill: url('#loadgrad');" cx="24" cy="30" rx="24" ry="24"></ellipse>
-                        <polyline id="loadwave" points="3 30.001 13.5 30.001 17.933 34.667 22.366 16 25.634 43.999 30.067 25.332 34.5 30.001 45 30.001"></polyline>
-                        <ellipse style="fill: rgb(255, 100, 100); stroke: rgb(255, 100, 100);" cx="14" cy="38" rx="1.466" ry="1.466"></ellipse>
-                        <ellipse style="fill: none; stroke: rgb(255, 100, 100);" cx="14" cy="38" rx="4.5" ry="4.5"></ellipse>
-                        <ellipse style="fill: none; stroke: rgb(255, 100, 100);" cx="14" cy="38" rx="7.5" ry="7.5"></ellipse>
-                    </g>
-                </svg> -->
             </div>
             <!-- <div id="app-name" lang="en">Taiwan Real-time Earthquake Monitoring</div>
             <div id="app-name" lang="ja">TREM 台湾リアルタイム地震モニタリング</div>
@@ -99,6 +79,8 @@
         <div id="view">
             <div class="view main show" id="main">
                 <div class="time-container">
+                    <div id="level"></div>
+                    <div id="target"></div>
                     <div id="log"></div>
                     <div id="time"></div>
                     <div id="app-version"></div>
@@ -218,31 +200,10 @@
                     <span>即時震度</span>
                     <span></span>
                 </div>
-                <!-- <div id="rt-maxintensitynum">
-                    <div>
-                        <div id="rt-maxintensityname">
-                            <span id="rt-maxintensity-name"></span>
-                        </div>
-                        --><!-- <div id="rt-maxintensity-id"></div> --><!--
-                        <div id="rt-maxintensity"></div>
-                    </div>
-                </div> -->
                 <div class="rt-station-container" id="rt-station">
                     <div id="rt-station-max" class="rt-station">
                         <div id="rt-station-max-label" class="rt-station-label"></div>
-                        <!-- <div class="rt-station-label">
-                            <span lang="en">Current</span>
-                            <span lang="ja">現地計測</span>
-                            <span lang="kr">Current</span>    TODO: Untranslated, remove this comment after translation
-                            <span lang="ru">Current</span>    TODO: Untranslated, remove this comment after translation
-                            <span lang="zh-CN">目前測站</span> TODO: Untranslated, remove this comment after translation
-                            <span lang="zh-TW">目前測站</span>
-                        </div> -->
                         <div id="rt-station-max-intensity" class="rt-station-intensity"></div>
-                        <!-- <div>
-                            <div id="rt-station-max-label" class="rt-station-label"></div>
-                            <div id="rt-station-max-intensity" class="rt-station-intensity"></div>
-                        </div> -->
                         <div class="rt-station-detail-container">
                             <span id="rt-station-max-id" class="rt-station-id"></span>
                             <span id="rt-station-max-name" class="rt-station-name"></span>
@@ -253,19 +214,7 @@
                     <hr class="divider vertical">
                     <div id="rt-station-local" class="rt-station">
                         <div id="rt-station-local-label" class="rt-station-label"></div>
-                        <!-- <div class="rt-station-label">
-                            <span lang="en">Current</span>
-                            <span lang="ja">現地計測</span>
-                            <span lang="kr">Current</span>    TODO: Untranslated, remove this comment after translation
-                            <span lang="ru">Current</span>    TODO: Untranslated, remove this comment after translation
-                            <span lang="zh-CN">目前測站</span> TODO: Untranslated, remove this comment after translation
-                            <span lang="zh-TW">目前測站</span>
-                        </div> -->
                         <div id="rt-station-local-intensity" class="rt-station-intensity"></div>
-                        <!-- <div>
-                            <div id="rt-station-local-label" class="rt-station-label"></div>
-                            <div id="rt-station-local-intensity" class="rt-station-intensity"></div>
-                        </div> -->
                         <div class="rt-station-detail-container">
                             <span id="rt-station-local-id" class="rt-station-id"></span>
                             <span id="rt-station-local-name" class="rt-station-name"></span>
