--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -439,6 +439,18 @@
                                         <span class="chip-icon material-symbols-rounded"></span>
                                         <progress id="downloader_progress" class="progressbar" value="0" max="1" style="display: none;"></progress>
                                     </button>
+                                    <button id="report-TREM" class="chip assist md3-ripple" onclick="openURL(this.value)">
+                                        <span class="chip-icon material-symbols-rounded">report</span>
+                                        <span class="chip-label">
+                                            <span lang="en">TREM report</span>
+                                            <span lang="ja">TREM report</span>
+                                            <span lang="kr">TREM report</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="ru">TREM report</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-CN">TREM報告</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="zh-TW">TREM報告</span>
+                                        </span>
+                                        <span class="chip-icon material-symbols-rounded"></span>
+                                    </button>
                                 </div>
                                 <hr class="divider">
                                 <div id="report-overview-body">
