--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -4144,6 +4144,30 @@
                                 </div>
                                 <div class="control-title">
                                     <div>
+                                        <span lang="zh-TW">測試舊rts</span>
+                                    </div>
+                                </div>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">測試舊rts</span>
+                                        </div>
+                                        <div class="option-label-description">
+                                            <span lang="zh-TW">測試舊rts</span>
+                                        </div>
+                                    </div>
+                                    <div class="control">
+                                        <input class="input-field" id="oldtime" type="text" placeholder="輸入舊時間格式 YYYY/MM/DD HH:MI:SS" style="width: 330px;">
+                                        <button class="filled-tonal-button setting-button md3-ripple" onclick="testoldtimeEEW()" style="margin-top: 10px; left: 10px;">
+                                            <span class="material-symbols-rounded filled-tonal-button-icon">replay</span>
+                                            <span class="filled-tonal-button-label">
+                                                <span lang="zh-TW">測試舊rts</span>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="control-title">
+                                    <div>
                                         <span lang="zh-TW">測試舊警報</span>
                                     </div>
                                 </div>
@@ -4157,8 +4181,8 @@
                                         </div>
                                     </div>
                                     <div class="control">
-                                        <input class="input-field" id="oldtime" type="text" placeholder="輸入舊時間格式 YYYY/MM/DD HH:MI:SS" style="width: 330px;">
-                                        <button class="filled-tonal-button setting-button md3-ripple" onclick="testoldtimeEEW()" style="margin-top: 10px; left: 10px;">
+                                        <input class="input-field" id="oldtrem" type="text" placeholder="輸入舊trem數字 XXX" style="width: 330px;">
+                                        <button class="filled-tonal-button setting-button md3-ripple" onclick="testoldtremEEW()" style="margin-top: 10px; left: 10px;">
                                             <span class="material-symbols-rounded filled-tonal-button-icon">replay</span>
                                             <span class="filled-tonal-button-label">
                                                 <span lang="zh-TW">測試舊警報</span>
