--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -645,6 +645,33 @@
                                             </span>
                                         </label>
                                     </div>
+                                    <div class="option-container">
+                                        <div class="option-label">
+                                            <span class="option-label-title">
+                                                <span lang="en">Show TREM P & S -wave</span>
+                                                <span lang="ja">TREM P & S 波を表示</span>
+                                                <span lang="kr">TREM P & S 파를 표시</span>
+                                                <span lang="ru">Показать TREM P & S -волну</span>
+                                                <span lang="zh-CN">显示 TREM P & S 波</span>
+                                                <span lang="zh-TW">顯示 TREM P & S 波</span>
+                                                <span class="option-label-id">trem.ps</span>
+                                            </span>
+                                            <span class="option-label-description">
+                                                <span lang="en">?</span>
+                                                <span lang="ja">?</span>
+                                                <span lang="kr">?</span>
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
+                                                <span lang="zh-TW">顯示 TREM EEW 地震波(進階用戶有效)。</span>
+                                            </span>
+                                        </div>
+                                        <label class="md3 switch">
+                                            <input type="checkbox" id="trem.ps" onclick="CheckSave('trem.ps')">
+                                            <span class="slider">
+                                                <span class="material-symbols-rounded icon">done</span>
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                                 <div class="control-title">
                                     <span lang="en">Earthquake report</span>
