--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3094,6 +3094,7 @@
                                                 <option value=250>250</option>
                                                 <option value=300>300</option>
                                                 <option value=500>500</option>
+                                                <option value=1000>1000</option>
                                             </select>
                                         </div>
                                     </div>
