--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3095,6 +3095,8 @@
                                                 <option value=300>300</option>
                                                 <option value=500>500</option>
                                                 <option value=1000>1000</option>
+                                                <option value=5000>5000</option>
+                                                <option value=10000>10000</option>
                                             </select>
                                         </div>
                                     </div>
