--- a/TREM.Electron/css/setting.css
+++ b/TREM.Electron/css/setting.css
@@ -311,14 +311,23 @@ body.settingDisabled .control-title, body.settingDisabled .option-label {
     justify-self: right;
 }
 
-.tremkey{
+.linkexec {
     width: 100%;
     display: flex;
 }
-.left{
+
+.leleft{
+    width: 85%;
+}
+
+.tremkey {
+    width: 100%;
+    display: flex;
+}
+.left {
     width: 90%;
 }
-.right{
+.right {
     width: 10%;
 }
 
