--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -4103,6 +4103,46 @@
                                     <span lang="zh-CN">?</span>
                                     <span lang="zh-TW">開啟更新檔資料夾</span>
                                 </button>
+                                <button class="flat-button md3-ripple" onclick="openexportFolder()">
+                                    <span lang="en">Open export folder</span>
+                                    <span lang="ja">?</span>
+                                    <span lang="kr">?</span>
+                                    <span lang="ru">?</span>
+                                    <span lang="zh-CN">?</span>
+                                    <span lang="zh-TW">開啟匯出資料夾</span>
+                                </button>
+                                <button class="flat-button md3-ripple" onclick="export_report()">
+                                    <span lang="en">Export Earthquake Report (Information)</span>
+                                    <span lang="ja">?</span>
+                                    <span lang="kr">?</span>
+                                    <span lang="ru">?</span>
+                                    <span lang="zh-CN">?</span>
+                                    <span lang="zh-TW">匯出地震報告(資訊)</span>
+                                </button>
+                                <button class="flat-button md3-ripple" onclick="export_trem_report()">
+                                    <span lang="en">Export TREM Earthquake Report (Information)</span>
+                                    <span lang="ja">?</span>
+                                    <span lang="kr">?</span>
+                                    <span lang="ru">?</span>
+                                    <span lang="zh-CN">?</span>
+                                    <span lang="zh-TW">匯出TREM地震報告(資訊)</span>
+                                </button>
+                                <button class="flat-button md3-ripple" onclick="import_report()">
+                                    <span lang="en">Import earthquake report (info)</span>
+                                    <span lang="ja">?</span>
+                                    <span lang="kr">?</span>
+                                    <span lang="ru">?</span>
+                                    <span lang="zh-CN">?</span>
+                                    <span lang="zh-TW">匯入地震報告(資訊)</span>
+                                </button>
+                                <button class="flat-button md3-ripple" onclick="import_trem_report()">
+                                    <span lang="en">Import TREM Earthquake Reports (information)</span>
+                                    <span lang="ja">?</span>
+                                    <span lang="kr">?</span>
+                                    <span lang="ru">?</span>
+                                    <span lang="zh-CN">?</span>
+                                    <span lang="zh-TW">匯入TREM地震報告(資訊)</span>
+                                </button>
                             </div>
                         </div>
                     </div>
