--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -520,7 +520,7 @@
                                             </span>
                                         </div>
                                         <div class="report-overview-value">
-                                            <span id="report-overview-unit-magnitude" class="report-overview-unit"></span>
+                                            <span class="report-overview-unit">M<sub id="report-overview-unit-magnitude"></sub></span>
                                             <span id="report-overview-magnitude"></span>
                                         </div>
                                     </div>
@@ -577,7 +577,7 @@
                     <div class="report-list-item-label">
                         <span class="report-list-item-location"></span>
                         <span class="report-list-item-description">
-                            <span class="report-overview-unit report-list-item-unit-Magnitude"></span><span class="report-list-item-Magnitude"></span>
+                            <span class="report-overview-unit">M<sub class="report-list-item-unit-Magnitude"></sub>:</span><span class="report-list-item-Magnitude"></span>
                             <span class="report-list-item-icon material-symbols-rounded">schedule</span><span class="report-list-item-time"></span>
                             <span class="report-list-item-icon material-symbols-rounded">tag</span><span class="report-list-item-id"></span>
                         </span>
