--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -249,6 +249,7 @@
                                 <span lang="zh-CN">地震报告</span> <!-- TODO: Untranslated, remove this comment after translation -->
                                 <span lang="zh-TW">地震報告</span>
                             </span>
+                            <span id="report-detail-header-number"></span>
                             <button id="report-detail-refresh" class="flat-button icon md3-ripple" onclick="TREM.Report.refreshList()">
                                 <span class="material-symbols-rounded">refresh</span>
                             </button>
